# rust-destinybot

./: Cargo.toml  README.md
command-macro/: Cargo.toml
command-macro/src/: lib.rs
command-parser/: Cargo.toml
command-parser/src/: lib.rs
src/: action.rs  commands.rs  event.rs  main.rs  message.rs  tests.rs
