[package]
name = "rust-destinybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tungstenite = "0.18"
tokio-tungstenite = "0.18"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26", features = ["macros", "fs", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
futures = "0.3"
command-parser = { path = "command-parser" }
command-macro = { path = "command-macro" }

async-minecraft-ping = "0.8.0"

[workspace]
members = ["command-parser", "command-macro"]