[package]
name = "rust-destinybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.10"
thiserror = "1"
async-trait = "0.1"
tungstenite = "0.18"
tokio-tungstenite = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26", features = ["macros", "fs", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
command-parser = { path = "command-parser" }
command-macro = { path = "command-macro" }

async-minecraft-ping = "0.8.0"
toml = { version = "0.7" }

[workspace]
members = ["command-parser", "command-macro"]